--- a/src/components/technology/styles.scss
+++ b/src/components/technology/styles.scss
@@ -49,6 +49,11 @@
         .heading-secondary {
             margin-bottom: 4rem;
         }
+
+        img {
+            width: 10rem;
+            margin: 0 1rem -10px;
+        }
     }
     
 }
